# NilseraOpenGLRenderEngine

./: CMakeLists.txt  README.md  imgui.ini
libs/glew-2.1.0/include/GL/: glew.h
res/Map/: test.map
res/Models/: Shotgun.blend1
res/Models/Primitives/: Quad.fbx
res/Shaders/: LightFragmentShader.glsl
res/Shaders/Core/: Gizmo_Frag.glsl
res/Shaders/PsxStyle/: Psx_Frag.glsl
src/: main.cpp
src/IndexBuffer/: IndexBuffer.cpp  IndexBuffer.h
src/Scenes/: TestScene.cpp  TestScene.h
src/Shader/: Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/VertexArray/: VertexArray.cpp  VertexArray.h
src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
src/VertexBufferLayout/: VertexBufferLayout.h
src/core/: Application.cpp  Application.h  GameObject.cpp  GameObject.h  GameTime.cpp  GameTime.h  Input.cpp  Input.h  Material.cpp  Material.h  Scene.cpp  Scene.h  SceneManager.h  Screen.cpp  Screen.h  Transform.cpp  Transform.h
src/core/Components/: IComponent.h
src/core/Components/Behaviour/: FirstPersonCharacterController.cpp  FirstPersonCharacterController.h
src/core/Components/Camera/: Camera.cpp  Camera.h
src/core/Components/Light/: Light.cpp  Light.h
src/core/Components/Light/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.h
src/core/Components/Light/PointLight/: PointLight.cpp  PointLight.h
src/core/Components/Light/SpotLight/: SpotLight.cpp  SpotLight.h
src/core/Components/Renderer/: Renderer.cpp  Renderer.h
src/core/LightManager/: LightManager.cpp  LightManager.h
src/core/Mesh/: Mesh.cpp  Mesh.h
src/core/Model/: Model.cpp  Model.h
src/core/Structs/: Vertex.cpp  Vertex.h
src/core/TMap/: TMap.cpp  TMap.h
